--- a/webapps/frontend/ui/tasklist/client/styles/modal.scss
+++ b/webapps/frontend/ui/tasklist/client/styles/modal.scss
@@ -21,11 +21,11 @@
 }
 
 .modal-header {
-  border-bottom: 1px solid @gray-lighter;
-  background: @modal-header-bg;
+  border-bottom: 1px solid $gray-lighter;
+  background: $modal-header-bg;
 }
 
 .modal-footer {
-  border-top: 1px solid @gray-lighter;
-  background: @modal-footer-bg;
+  border-top: 1px solid $gray-lighter;
+  background: $modal-footer-bg;
 }
