--- a/webapps/frontend/ui/tasklist/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.scss
+++ b/webapps/frontend/ui/tasklist/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.scss
@@ -16,7 +16,7 @@
     display: inline-block;
     text-align: center;
     width: 39px;
-    padding: @padding-base-vertical @padding-base-horizontal;
+    padding: $padding-base-vertical $padding-base-horizontal;
     border: 1px solid transparent;
 
     > .glyphicon {
@@ -44,10 +44,10 @@
   }
 
   input.ng-invalid-authorization.ng-valid-duplicate {
-    color: @input-color;
-    background-color: @input-bg;
-    border-color: @input-border;
-    .box-shadow(inset 0 1px 1px rgba(0,0,0,0.075));
-    .form-control-focus();
+    color: $input-color;
+    background-color: $input-bg;
+    border-color: $input-border;
+    @include box-shadow(inset 0 1px 1px rgba(0,0,0,0.075));
+    @include form-control-focus();
   }
 }
