--- a/webapps/frontend/ui/tasklist/client/scripts/filter/directives/cam-tasklist-filter-modal-form.scss
+++ b/webapps/frontend/ui/tasklist/client/scripts/filter/directives/cam-tasklist-filter-modal-form.scss
@@ -1,14 +1,14 @@
 [cam-tasklist-filter-modal-form] {
   .panel-title {
     .glyphicon {
-      font-size: @font-size-base;
-      color: @brand-danger;
+      font-size: $font-size-base;
+      color: $brand-danger;
     }
   }
 
   .undefined-variable,
   .global-access {
-    margin: 0 0 (@grid-gutter-width * 0.5) (@grid-gutter-width * 0.5);
+    margin: 0 0 ($grid-gutter-width * 0.5) ($grid-gutter-width * 0.5);
   }
 
   .user-read-permissions .btn-link {
@@ -17,7 +17,7 @@
 
     > span {
       display: inline-block;
-      max-width: ~"calc(100% - 1.3em)";
+      max-width: calc(100% - 1.3em);
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
