--- a/webapps/frontend/ui/tasklist/client/scripts/task/directives/cam-tasklist-task-meta.scss
+++ b/webapps/frontend/ui/tasklist/client/scripts/task/directives/cam-tasklist-task-meta.scss
@@ -2,7 +2,7 @@
   .meta {
     float: left;
     width: 50%;
-    margin: 0 0 (@grid-gutter-width / 3) 0;
+    margin: 0 0 ($grid-gutter-width / 3) 0;
     padding: 0;
 
     > li {
@@ -12,7 +12,7 @@
       padding: 0;
       width: auto;
       max-width: 100%;
-      height: @line-height-computed;
+      height: $line-height-computed;
     }
 
     .claim,
@@ -23,8 +23,6 @@
   }
 
   [cam-widget-inline-field] {
-    padding-right: 20px;
-    margin-right: -20px;
     margin-left: -3px;
 
     &.inline-editing {
@@ -47,10 +45,10 @@
   }
 
   .groups {
-    color: @link-color;
+    color: $link-color;
 
     &:hover {
-      color: @link-hover-color;
+      color: $link-hover-color;
     }
 
     > span {
@@ -77,7 +75,7 @@
     &::before {
       content: '\e031';
       position: absolute;
-      color: @gray-light;
+      color: $gray-light;
       top: 6px;
       right: 4px;
       /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword -- Icon Font */
@@ -88,11 +86,11 @@
       line-height: 1;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
-      .animation(~'spin 1s infinite linear');
+      animation:  'spin 1s infinite linear';
     }
 
     input {
-      color: @gray-light;
+      color: $gray-light;
       cursor: wait;
       cursor: progress;
     }
@@ -100,7 +98,7 @@
 }
 
 // S+
-@media (min-width: @screen-sm-min) {
+@media (min-width: $screen-sm-min) {
   [cam-tasklist-task-meta] .meta {
     > li {
       float: left;
@@ -110,7 +108,7 @@
 }
 
 // S
-@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
   body {
     &.list-column-close {
       [cam-tasklist-task-meta] .meta {
@@ -123,7 +121,7 @@
 }
 
 // M
-@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
   body {
     &.list-column-close {
       [cam-tasklist-task-meta] .meta {
@@ -137,7 +135,7 @@
   }
 }
 
-@media (min-width: @screen-lg-min) {
+@media (min-width: $screen-lg-min) {
   [cam-tasklist-task-meta] .meta {
     > li {
       width: 50%;
