--- a/webapps/frontend/ui/tasklist/client/scripts/task/directives/cam-tasklist-task.scss
+++ b/webapps/frontend/ui/tasklist/client/scripts/task/directives/cam-tasklist-task.scss
@@ -33,7 +33,7 @@
   }
 
   .tab-content {
-    padding-top: @grid-gutter-width;
+    padding-top: $grid-gutter-width;
   }
 
   .form-container {
@@ -49,10 +49,10 @@
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.218s ease;
-    padding: 0 (@grid-gutter-width * 0.5);
+    padding: 0 ($grid-gutter-width * 0.5);
 
     > .alert {
-      padding: (@grid-gutter-width * 0.5) 0;
+      padding: ($grid-gutter-width * 0.5) 0;
     }
   }
 
@@ -74,6 +74,6 @@
 
 [cam-tasklist-form] {
   .form-actions {
-    margin-top: (@grid-gutter-width / 2);
+    margin-top: ($grid-gutter-width / 2);
   }
 }
