--- a/webapps/frontend/ui/tasklist/client/scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin.scss
+++ b/webapps/frontend/ui/tasklist/client/scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin.scss
@@ -1,8 +1,8 @@
 .day.row {
-  margin-top: (@grid-gutter-width / 1);
-  border-top: 1px @line-style @line-color;
-  padding-top: (@grid-gutter-width / 1);
-  margin-bottom: (@grid-gutter-width / 1);
+  margin-top: ($grid-gutter-width / 1);
+  border-top: 1px $line-style $line-color;
+  padding-top: ($grid-gutter-width / 1);
+  margin-bottom: ($grid-gutter-width / 1);
 
   &:first-child {
     margin-top: 0;
@@ -13,7 +13,7 @@
 
 .event {
   .operation {
-    margin-bottom: (@grid-gutter-width / 2);
+    margin-bottom: ($grid-gutter-width / 2);
     overflow: hidden;
   }
 
@@ -38,7 +38,7 @@
     height: 0;
     padding-bottom: 100%;
     overflow: hidden;
-    background-color: @gray-lighter;
+    background-color: $gray-lighter;
   }
 
   span {
@@ -73,7 +73,7 @@
   }
 
   > div {
-    padding-top: (@grid-gutter-width / 2);
+    padding-top: ($grid-gutter-width / 2);
 
     &::before {
       display: block;
@@ -81,8 +81,8 @@
       width: 100%;
       height: 1px;
       margin-top: -1px;
-      border-top: 1px @line-style-alt @line-color-alt;
-      margin-bottom: (@grid-gutter-width / 2);
+      border-top: 1px $line-style-alt $line-color-alt;
+      margin-bottom: ($grid-gutter-width / 2);
     }
   }
 
@@ -97,7 +97,7 @@
   }
 
   .event {
-    margin-bottom: (@grid-gutter-width);
+    margin-bottom: ($grid-gutter-width);
   }
 
   .operation-meta {
@@ -121,7 +121,7 @@
 .event-body {
   > .line {
     overflow: hidden;
-    margin-top: (@grid-gutter-width / 2);
+    margin-top: ($grid-gutter-width / 2);
 
     &:first-child {
       margin-top: 0;
@@ -131,7 +131,7 @@
 
 .original-value {
   text-decoration: line-through;
-  color: @gray-light;
+  color: $gray-light;
 }
 
 .new-value {
@@ -140,5 +140,5 @@
 
 .event-property {
   font-weight: bold;
-  padding-right: (@grid-gutter-width / 2);
+  padding-right: ($grid-gutter-width / 2);
 }
