--- a/webapps/frontend/ui/tasklist/client/scripts/tasklist/directives/cam-tasklist-tasks.scss
+++ b/webapps/frontend/ui/tasklist/client/scripts/tasklist/directives/cam-tasklist-tasks.scss
@@ -1,4 +1,4 @@
-@import (reference) "~operaton-commons-ui/resources/less/shared/_mixins";
+@import "~operaton-commons-ui/resources/sass/shared/_mixins";
 
 .task-card-details {
   overflow: hidden;
@@ -16,9 +16,9 @@
     left: 0;
     right: 0;
     text-align: center;
-    height: @grid-gutter-width;
+    height: $grid-gutter-width;
 
-    .gradient(top, fade(@column-center-bg, 0), @column-center-bg);
+    @include gradient(top, fade($column-center-bg, 0), $column-center-bg);
 
     background-position-y: 100%;
     background-repeat: repeat-x;
@@ -38,7 +38,7 @@
 
     .shutter {
       background: none;
-      height: (@grid-gutter-width * 0.5);
+      height: ($grid-gutter-width * 0.5);
     }
   }
 
