--- a/webapps/frontend/ui/tasklist/client/styles/layout.scss
+++ b/webapps/frontend/ui/tasklist/client/styles/layout.scss
@@ -1,7 +1,7 @@
 /* stylelint-disable no-descending-specificity */
-@import "~ui/common/styles/_three-cols-layout";
+@import "~ui/common/styles/three-cols-layout";
 
-.three-cols-layout-base();
+@include three-cols-layout-base();
 
 .tasks-list [cam-tasks] {
   position: relative;
@@ -10,12 +10,14 @@
 
 button {
   &.region-toggle {
-    height: @column-top-height;
+    height: $column-top-height;
     margin: 0;
     padding: 0;
 
     > .glyphicon::before {
-      content: '\e257';
+      @extend .bi-chevron-left;
+      font-size: 16px;
+      color: $black;
     }
   }
 
@@ -27,12 +29,12 @@ button {
 
   &.maximize,
   &.reset-regions {
-    margin: 0 (@grid-gutter-width / 3);
+    margin: 0 calc(#{$grid-gutter-width} / 3);
   }
 }
 
-@media (max-width: @screen-xs-max) {
-  .three-cols-layout-handheld();
+@media (max-width: $screen-xs-max) {
+  @include three-cols-layout-handheld();
 
   .three-cols-layout-columns {
     > .column {
@@ -47,15 +49,15 @@ button {
   }
 }
 
-.three-cols-layout-states();
-.three-cols-layout-colors(@column-left-bg, @column-center-bg, @column-right-bg);
-.three-cols-layout-header();
+@include three-cols-layout-states();
+@include three-cols-layout-colors($column-left-bg, $column-center-bg, $column-right-bg);
+@include three-cols-layout-header();
 
 [cam-widget-header] [ng-transclude] {
   float: right;
-  border-right: 1px solid darken(@gray-lighter, 10%);
+  //border-right: 1px solid darken($gray-200, 10%);
 
-  @media screen and (max-width: (@grid-float-breakpoint - 1)) {
+  @media screen and (max-width: ($grid-float-breakpoint - 1px)) {
     border-right: none;
   }
 
@@ -67,12 +69,17 @@ button {
 .column-right .region-toggle .glyphicon::before,
 .filters-column-close .column-left .region-toggle .glyphicon::before,
 .list-column-close .column-center .region-toggle .glyphicon::before {
-  content: '\e258';
+  @extend .bi-chevron-right;
+  font-size: 16px;
+  color: $black;
 }
 
 .task-column-close .column-right .region-toggle .glyphicon::before {
-  content: '\e257';
+  @extend .bi-chevron-left;
+  font-size: 16px;
+  color: $black;
 }
+
 // prevent "tab navigation focus" glitch
 .task-column-close .column-right {
   .three-cols-layout-cell.top {
@@ -97,7 +104,7 @@ button {
   .column-center {
     .alert,
     .well {
-      margin: 0 (@grid-gutter-width * 0.5) (@grid-gutter-width * 0.5) (@grid-gutter-width * 0.5);
+      margin: 0 calc(#{$grid-gutter-width} * 0.5) calc(#{$grid-gutter-width} * 0.5) calc(#{$grid-gutter-width} * 0.5);
     }
 
     .cells-wrapper {
@@ -112,22 +119,22 @@ button {
 
   .column-left .list-unstyled > .item,
   .column-center .list-unstyled > li {
-    .column-list-item();
+    @include column-list-item();
   }
 
   .column-left .list-unstyled {
-    .first-column-list();
+    @include first-column-list();
 
     > .item {
-      .first-column-list-item();
+      @include first-column-list-item();
     }
   }
 
   .column-center .list-unstyled {
-    .second-column-list();
+    @include second-column-list();
 
     > li {
-      .second-column-list-item();
+      @include second-column-list-item();
     }
   }
 
@@ -166,7 +173,7 @@ button {
   }
 
   .counter {
-    color: @gray;
+    color: $gray-600;
 
     &::before {
       content: '(';
@@ -180,10 +187,10 @@ button {
 
 .task-card {
   .nav-tabs {
-    padding-left: (@grid-gutter-width * 0.5);
-    padding-right: (@grid-gutter-width * 0.5);
-    margin-left: 0 - (@grid-gutter-width * 0.5);
-    margin-right: 0 - (@grid-gutter-width * 0.5);
+    padding-left: calc(#{$grid-gutter-width} * 0.5);
+    padding-right: calc(#{$grid-gutter-width} * 0.5);
+    margin-left: calc(0px - (#{$grid-gutter-width} * 0.5));
+    margin-right: calc(0px - (#{$grid-gutter-width} * 0.5));
   }
 }
 
@@ -197,12 +204,12 @@ button {
 
     view {
       overflow: visible;
-      padding: (@grid-gutter-width * 0.5) 0;
+      padding: calc(#{$grid-gutter-width} * 0.5) 0;
     }
   }
 
   [cam-widget-search] {
-    margin: 0 (@grid-gutter-width * 0.5);
+    margin: 0 calc(#{$grid-gutter-width} * 0.5);
     padding-bottom: 0;
   }
 
@@ -224,7 +231,7 @@ button {
     h5,
     h6 {
       margin-top: 5px;
-      font-size: @font-size-base;
+      font-size: $font-size-base;
     }
 
     h6 {
@@ -278,7 +285,7 @@ body.task-column-close [cam-widget-search].multiline-pills [cam-widget-search-pi
 }
 
 // S+ (columns layout)
-@media (min-width: @screen-sm-min) {
+@media (min-width: $screen-sm-min) {
   .filters-column-close {
     .task-filters {
       .cell.content {
@@ -340,7 +347,7 @@ body.task-column-close [cam-widget-search].multiline-pills [cam-widget-search-pi
   .tasks-list {
     > .cell.top,
     .three-cols-layout-cell.top > button {
-      margin-right: (3 - (@grid-gutter-width / 2));
+      margin-right: calc(3px - (#{$grid-gutter-width} / 2));
     }
   }
 
@@ -348,7 +355,7 @@ body.task-column-close [cam-widget-search].multiline-pills [cam-widget-search-pi
     > .three-cols-layout-cell.top {
       > div,
       > view {
-        width: ~"calc(100% - 35px)";
+        width: calc(100% - 35px);
         margin-left: 0;
         margin-right: 0;
         padding: 0;
@@ -364,7 +371,7 @@ body.task-column-close [cam-widget-search].multiline-pills [cam-widget-search-pi
     [cam-widget-search] {
       position: relative;
       z-index: 15;
-      padding-bottom: (@grid-gutter-width / 2);
+      padding-bottom: calc(#{$grid-gutter-width} / 2);
       overflow: visible;
     }
   }
@@ -375,7 +382,7 @@ body.task-column-close [cam-widget-search].multiline-pills [cam-widget-search-pi
         float: left;
 
         &:first-child {
-          margin-left: (3 - (@grid-gutter-width / 2));
+          margin-left: calc(3px - (#{$grid-gutter-width} / 2));
         }
       }
 
@@ -388,15 +395,15 @@ body.task-column-close [cam-widget-search].multiline-pills [cam-widget-search-pi
 }
 
 // S
-@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-  .three-cols-layout(180px, 300px);
-  .three-cols-layout-states(180px, 300px);
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+  @include three-cols-layout(180px, 300px);
+  @include three-cols-layout-states(180px, 300px);
 }
 
 // M
-@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-  .three-cols-layout(200px, 320px);
-  .three-cols-layout-states(200px, 320px);
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+  @include three-cols-layout(200px, 320px);
+  @include three-cols-layout-states(200px, 320px);
 
   .filters-column-close.task-column-close .variables-list .col-lg-6 {
     width: 25%;
@@ -404,9 +411,9 @@ body.task-column-close [cam-widget-search].multiline-pills [cam-widget-search-pi
 }
 
 // L
-@media (min-width: @screen-lg-min) {
-  .three-cols-layout(220px, 360px);
-  .three-cols-layout-states(220px, 360px);
+@media (min-width: $screen-lg-min) {
+  @include three-cols-layout(220px, 360px);
+  @include three-cols-layout-states(220px, 360px);
 
   .filters-column-close.task-column-close .variables-list .col-lg-6 {
     width: 20%;
