--- a/webapps/frontend/ui/tasklist/client/styles/styles.scss
+++ b/webapps/frontend/ui/tasklist/client/styles/styles.scss
@@ -1,5 +1,5 @@
 @import "_app-variables";
-@import "~ui/common/styles/cam-webapps-common.less";
+@import "~ui/common/styles/cam-webapps-common.scss";
 @import "~ui/common/styles/app-splash";
 
 /* ---------------------------------------------------------------- */
