Migrate welcome ui components and styles to Bootstrap 4

--- a/webapps/frontend/ui/welcome/client/scripts/pages/welcome.scss
+++ b/webapps/frontend/ui/welcome/client/scripts/pages/welcome.scss
@@ -39,5 +39,5 @@
 .app-link {
   overflow: hidden;
   display: block;
-  margin-bottom: @grid-gutter-width * 0.5;
+  margin-bottom: $grid-gutter-width * 0.5;
 }
