--- a/webapps/frontend/ui/welcome/client/scripts/directives/custom-links.scss
+++ b/webapps/frontend/ui/welcome/client/scripts/directives/custom-links.scss
@@ -1,5 +1,5 @@
 .custom-link-wrapper {
-  margin-bottom: @grid-gutter-width * 0.5;
+  margin-bottom: $grid-gutter-width * 0.5;
 
   > a,
   > span {
