--- a/webapps/frontend/ui/common/styles/cam-webapps-common.less
+++ b/webapps/frontend/ui/common/styles/cam-webapps-common.less
@@ -211,5 +211,5 @@
 @import '~operaton-commons-ui/lib/widgets/clipboard/cam-widget-clipboard';
 @import '~operaton-commons-ui/lib/widgets/header/cam-widget-header';
 @import '~operaton-commons-ui/lib/widgets/footer/cam-widget-footer';
-@import './glyphicon-overrides.less';
+@import './glyphicon-overrides.scss';
 @import (less) '@bpmn-io/form-js/dist/assets/form-js.css';
