--- a/webapps/frontend/ui/tasklist/client/styles/layout.scss
+++ b/webapps/frontend/ui/tasklist/client/styles/layout.scss
@@ -325,7 +325,7 @@ body.task-column-close [cam-widget-search].multiline-pills [cam-widget-search-pi
           width: 50%;
         }
 
-        > .col-xs-4 {
+        > .col-4 {
           text-align: right;
         }
       }
