--- a/webapps/frontend/ui/cockpit/client/scripts/components/variables/variable-add-dialog.html
+++ b/webapps/frontend/ui/cockpit/client/scripts/components/variables/variable-add-dialog.html
@@ -19,10 +19,10 @@
         request-aware>
     <fieldset>
 
-      <div class="form-group variable-name">
-        <label class="control-label col-xs-4"
+      <div class="form-group variable-name row">
+        <label class="control-label col-4 col-sm-5"
                for="variableName">{{ 'VARIABLE_ADD_VARIABLE_NAME' | translate }}</label>
-        <div class="col-xs-8">
+        <div class="col-8 col-sm-7">
           <input id="variableNameId"
                  name="variableName"
                  class="form-control"
@@ -33,10 +33,10 @@
         </div>
       </div>
 
-      <div class="form-group variable-type">
-        <label class="control-label col-xs-4"
+      <div class="form-group variable-type row">
+        <label class="control-label col-4 col-sm-5"
                for="variableType">{{ 'VARIABLE_ADD_VARIABLE_TYPE' | translate }}</label>
-        <div class="col-xs-8">
+        <div class="col-8 col-sm-7">
           <select id="variableTypeId"
                   name="variableType"
                   class="form-control"
@@ -46,10 +46,10 @@
         </div>
       </div>
 
-      <div class="form-group variable-value">
-        <label class="control-label col-xs-4"
+      <div class="form-group variable-value row">
+        <label class="control-label col-4 col-sm-5"
                for="variableValue">{{ 'VARIABLE_ADD_VARIABLE_VALUE' | translate }}</label>
-        <div class="col-xs-8">
+        <div class="col-8 col-sm-7">
           <div variable="newVariable" form="addVariableForm"></div>
 
           <p class="invalid"
