--- a/webapps/frontend/ui/cockpit/plugins/base/app/views/processDefinition/update-suspension-state-dialog.html
+++ b/webapps/frontend/ui/cockpit/plugins/base/app/views/processDefinition/update-suspension-state-dialog.html
@@ -25,7 +25,7 @@
           ng-submit="updateSuspensionState()">
       <fieldset>
         <div class="form-group row">
-          <label class="control-label col-sm-5 col-4"
+          <label class="control-label col-sm-5 col-4 text-right"
                  for="includeInstancesValue">{{'PLUGIN_SUSPENSION_INCLUDE_INSTANCES' | translate}}
             <!-- activation -->
             <span uib-tooltip="{{'PLUGIN_SUSPENSION_INCLUDING_MESSAGE_1' | translate}}"
@@ -53,7 +53,7 @@
         </div>
 
         <div class="form-group row">
-          <label class="control-label col-sm-5 col-4" for="executeImmediately">{{'PLUGIN_SUSPENSION_EXECUTE' |
+          <label class="control-label col-sm-5 col-4 text-right" for="executeImmediately">{{'PLUGIN_SUSPENSION_EXECUTE' |
             translate}}
             <span uib-tooltip="{{'PLUGIN_SUSPENSION_DECIDE_ACTIVATION' | translate}}"
                   tooltip-placement="right"
@@ -68,7 +68,7 @@
           </label>
 
           <div class="col-sm-7 col-8">
-            <label class="radio">
+            <label class="radio form-check pl-0">
               <input ng-model="data.executeImmediately"
                      ng-value="true"
                      type="radio"
@@ -76,7 +76,7 @@
               {{'PLUGIN_SUSPENSION_IMMEDIATELY' | translate}}
             </label>
 
-            <label class="radio">
+            <label class="radio form-check pl-0">
               <input ng-model="data.executeImmediately"
                      ng-value="false"
                      type="radio"
@@ -85,9 +85,9 @@
             </label>
           </div>
         </div>
-        <div class="form-group"
+        <div class="form-group row"
              ng-show="!data.executeImmediately">
-          <label class="control-label col-sm-5 col-4"
+          <label class="control-label col-sm-5 col-4 text-right"
                  for="executionDateValue">
             {{'PLUGIN_SUSPENSION_SCHEDULE_AT' | translate}}
           </label>
