--- a/webapps/frontend/ui/cockpit/plugins/base/app/views/processInstance/cancel-process-instance-dialog.html
+++ b/webapps/frontend/ui/cockpit/plugins/base/app/views/processInstance/cancel-process-instance-dialog.html
@@ -55,7 +55,7 @@
       <div  ng-hide="hideSkipCustomListeners"
             class="form-group skip-custom-listener row">
 
-        <label class="control-label col-5"
+        <label class="control-label col-5 text-right"
                for="skipCustomListeners">
           {{ 'PLUGIN_CANCEL_PROCESS_SKIP_CUSTOM_LISTENERS' | translate }}
           <span class="glyphicon glyphicon-question-sign"
@@ -77,7 +77,7 @@
       <div class="form-group row skip-custom-listener"
            ng-hide="SKIP_IO_MAPPINGS.hidden">
 
-        <label class="control-label col-5"
+        <label class="control-label col-5 text-right"
                for="skipIoMappings">
           {{ 'PLUGIN_CANCEL_PROCESS_SKIP_IO_MAPPINGS' | translate }}
           <span class="glyphicon glyphicon-question-sign"
