Revert "build(deps): bump bootstrap from 3.4.1 to 5.3.8 in /webapps/frontend"
This reverts commit f29c7f507c963e6ff55f23180f7108449fb64223.

--- a/webapps/frontend/ui/cockpit/client/styles/directives/process-diagram.less
+++ b/webapps/frontend/ui/cockpit/client/styles/directives/process-diagram.less
@@ -12,7 +12,7 @@
   user-select: none;
 
   .activity-highlight {
-    .box-shadow(~"0 0 @{border-radius-base} @{border-radius-base} @{highlight-shadow-color}");
+    .box-shadow(~"0 0 @{border-radius-base} @{border-radius-base} @{highlihgt-shadow-color}");
 
     border-radius: @border-radius-base;
     cursor: pointer;
