Update boostrap version to 4.6.2

--- a/webapps/frontend/operaton-commons-ui/resources/scss/shared/_variables.scss
+++ b/webapps/frontend/operaton-commons-ui/resources/scss/shared/_variables.scss
@@ -47,7 +47,7 @@ $gray-lighter: $gray-200 !default; // Used for borders/backgrounds
 
 
 $text-color:                      $gray-600; // BS3 @gray -> BS4 $gray-600
-$font-size-base:                  14px;
+$font-size-base:                  0.875rem;
 $main-darker:                     darken($main-color, 25%);
 
 $important-color:                 #b94a48;
