--- a/webapps/frontend/operaton-commons-ui/resources/scss/sites/base.scss
+++ b/webapps/frontend/operaton-commons-ui/resources/scss/sites/base.scss
@@ -5,7 +5,7 @@
 
 // 2. Variables (Define these before they are used)
 $font-family-sans-serif:      'open_sansregular', Helvetica, Arial, Verdana, sans-serif;
-$font-size-base:              16px;
+$font-size-base:              1rem;
 $line-height-base:            1.6;
 
 // BS4 uses $font-family-base instead of @font-family-base
