--- a/webapps/frontend/ui/tasklist/client/scripts/task/plugins/detail/cam-tasklist-task-detail-diagram-plugin.scss
+++ b/webapps/frontend/ui/tasklist/client/scripts/task/plugins/detail/cam-tasklist-task-detail-diagram-plugin.scss
@@ -1,6 +1,6 @@
 
 .diagram-loader {
-  background-color: fade($body-bg, 40%);
+  background-color: rgba($body-bg, 0.4);
   position: absolute;
   z-index: 5;
   top: 0;
